Removed height attribute on the facet divs (because it wasn't overflowing correctly)

--- a/static/main.css
+++ b/static/main.css
@@ -68,7 +68,6 @@ body {
 	padding-left: 5px;
 	margin-left: 5px;
 	float: left;
-	height: 12px;
 }
 
 .topic{
